<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="16dp"
    tools:context=".Activities.singInActivity">


    <TextView
        android:id="@+id/tv_signup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/singUpScreen_header_text"
        android:textAlignment="center"
        android:textColor="@color/secundary_text_color"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_signup_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_singin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/singupScreen_header_et_email" />

            <EditText
                android:id="@+id/et_singin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/singupScreen_header_et_password" />

            <Button
                android:id="@+id/bt_signIn_SignInActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_button_rounded"
                android:text="@string/loginScreen_sing_in_button" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>